examples/test/testpolicy16862.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16862
  namespace: namespace59
spec:
  podSelector:
    matchLabels:
      key19: value31
      key34: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value44
          key9: value6
          key48: value49
      podSelector:
        matchLabels:
          key16: value4
          key5: value12
          key41: value48
